--- a/index.html
+++ b/index.html
@@ -1,111 +1,33 @@
 
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>মোঃ শামীম আহমেদ</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background: linear-gradient(135deg, #0077b6, #00b4d8);
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-    }
-    .profile {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 2rem auto;
-      max-width: 800px;
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    .profile img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 5px solid #00b4d8;
-      margin-bottom: 1rem;
-    }
-    .profile h2 {
-      margin-bottom: 0.5rem;
-      color: #0077b6;
-    }
-    .profile p {
-      text-align: center;
-      line-height: 1.6;
-    }
-    .gallery {
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      margin-top: 2rem;
-    }
-    .gallery img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #0077b6;
-      color: white;
-      margin-top: 2rem;
-    }
-    @media (max-width: 600px) {
-      .gallery {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shamim Portfolio</title>
+    <style>
+        body { font-family: Arial, sans-serif; background: #111; color: #fff; text-align: center; }
+        h1 { margin-top: 20px; }
+        .profile-container { display: flex; justify-content: center; gap: 20px; margin-top: 40px; flex-wrap: wrap; }
+        .profile-container img {
+            width: 250px;
+            height: auto;
+            border-radius: 20px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+            transition: transform 0.4s ease-in-out, box-shadow 0.4s ease-in-out;
+        }
+        .profile-container img:hover {
+            transform: scale(1.05) rotate(1deg);
+            box-shadow: 0 10px 30px rgba(255,255,255,0.3);
+        }
+    </style>
 </head>
 <body>
-
-  <header>
-    <h1>মোঃ শামীম আহমেদ</h1>
-    <p>একজন প্রযুক্তিপ্রেমী এবং অনলাইন উদ্যোক্তা</p>
-  </header>
-
-  <section class="profile">
-    <img src="profile1.jpg" alt="Shamim Ahmed">
-    <h2>Welcome / স্বাগতম</h2>
-    <p>
-      আমি মোঃ শামীম আহমেদ। আমি অনলাইন মার্কেটিং, ওয়েব ডেভেলপমেন্ট এবং ডিজিটাল প্রযুক্তির প্রতি প্রচণ্ড আগ্রহী।
-      আমি চেষ্টা করি নতুন কিছু শিখতে এবং তা দিয়ে অন্যদের উপকারে আসতে।
-    </p>
-
-    <div class="gallery">
-      <img src="profile1.jpg" alt="Shamim Ahmed Photo 1">
-      <img src="profile2.jpg" alt="Shamim Ahmed Photo 2">
+    <h1>Shamim's Profile</h1>
+    <div class="profile-container">
+        <img src="images/profile1.jpg" alt="Profile 1">
+        <img src="images/profile2.jpg" alt="Profile 2">
+        <img src="images/profile3.jpg" alt="Profile 3">
     </div>
-  </section>
-
-  <footer>
-    &copy; 2025 মোঃ শামীম আহমেদ | All rights reserved
-  </footer>
-
 </body>
 </html>
